Fix schedule spacing

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -14523,7 +14523,7 @@ a.theme-link:hover {
 
 .schedule-tab-content .item {
     position: relative;
-    margin-bottom: 2rem
+    margin-bottom: 4rem
 }
 
 .schedule-tab-content .item.item-talk {
